# axm-aide

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml
.agent/: CARD.md
.github/workflows/: ci.yml
docs/: LOOP.md
src/axm_aide/: __init__.py  brief.py  cli.py  records.py
tests/: conftest.py  test_brief.py  test_records_shape.py  test_seal_verify.py
